--- a/project/helm/templates/deploy.yaml
+++ b/project/helm/templates/deploy.yaml
@@ -34,5 +34,5 @@ spec:
         readinessProbe:
           httpGet:
             path: {{ .Values.readinessProbe.path }} 
-            port: {{ .Values.livenessProbe.port }} 
+            port: {{ .Values.readinessProbe.port }} 
 
